# pickleballcpp

./: CMakeLists.txt  config.hpp  main.cpp
detectors/: ball_detector.cpp  ball_detector.hpp  ball_tracking.cpp  ball_tracking.hpp  line_detector.cpp  line_detector.hpp
utils/: geometry.cpp  geometry.hpp  kalman.cpp  kalman.hpp  vlc_reader.cpp  vlc_reader.hpp
